--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BudgetGUI
 excludes=
+file.reference.flatlaf-3.5.1.jar=..\\..\\..\\Desktop\\flatlaf-3.5.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.flatlaf-3.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
