--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=BudgetGUI
+application.vendor=jgower17
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,55 @@ dist.jar=${dist.dir}/BudgetGUI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BudgetGUI
+endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.15.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\lib\\commons-codec-1.15.jar
+file.reference.commons-collections4-4.4.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\lib\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.21.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\commons-compress-1.21.jar
+file.reference.commons-io-2.11.0.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\lib\\commons-io-2.11.0.jar
+file.reference.commons-logging-1.2.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\commons-logging-1.2.jar
+file.reference.commons-math3-3.6.1.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\lib\\commons-math3-3.6.1.jar
+file.reference.curvesapi-1.07.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\curvesapi-1.07.jar
 file.reference.flatlaf-3.5.1.jar=..\\..\\..\\Desktop\\flatlaf-3.5.1.jar
+file.reference.jakarta.activation-2.0.1.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.activation-2.0.1.jar
+file.reference.jakarta.xml.bind-api-3.0.1.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.xml.bind-api-3.0.1.jar
+file.reference.log4j-api-2.18.0.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\lib\\log4j-api-2.18.0.jar
+file.reference.poi-5.2.3.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-5.2.3.jar
+file.reference.poi-examples-5.2.3.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-examples-5.2.3.jar
+file.reference.poi-excelant-5.2.3.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-excelant-5.2.3.jar
+file.reference.poi-javadoc-5.2.3.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-javadoc-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-full-5.2.3.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-ooxml-full-5.2.3.jar
+file.reference.poi-ooxml-lite-5.2.3.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-ooxml-lite-5.2.3.jar
+file.reference.poi-scratchpad-5.2.3.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-scratchpad-5.2.3.jar
+file.reference.slf4j-api-1.7.36.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\slf4j-api-1.7.36.jar
+file.reference.SparseBitSet-1.2.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\lib\\SparseBitSet-1.2.jar
+file.reference.xmlbeans-5.1.1.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\xmlbeans-5.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.flatlaf-3.5.1.jar}
+    ${file.reference.flatlaf-3.5.1.jar}:\
+    ${file.reference.poi-5.2.3.jar}:\
+    ${file.reference.poi-examples-5.2.3.jar}:\
+    ${file.reference.poi-excelant-5.2.3.jar}:\
+    ${file.reference.poi-javadoc-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-full-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-lite-5.2.3.jar}:\
+    ${file.reference.poi-scratchpad-5.2.3.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.curvesapi-1.07.jar}:\
+    ${file.reference.jakarta.activation-2.0.1.jar}:\
+    ${file.reference.jakarta.xml.bind-api-3.0.1.jar}:\
+    ${file.reference.slf4j-api-1.7.36.jar}:\
+    ${file.reference.xmlbeans-5.1.1.jar}:\
+    ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.log4j-api-2.18.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
