--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,6 +45,9 @@ file.reference.curvesapi-1.07.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\
 file.reference.flatlaf-3.5.1.jar=..\\..\\..\\Desktop\\flatlaf-3.5.1.jar
 file.reference.jakarta.activation-2.0.1.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.xml.bind-api-3.0.1.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.xml.bind-api-3.0.1.jar
+file.reference.jcommon-1.0.23.jar=..\\..\\..\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-swt.jar=..\\..\\..\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=..\\..\\..\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
 file.reference.log4j-api-2.18.0.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\lib\\log4j-api-2.18.0.jar
 file.reference.poi-5.2.3.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-5.2.3.jar
 file.reference.poi-examples-5.2.3.jar=..\\..\\..\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-examples-5.2.3.jar
@@ -81,7 +84,10 @@ javac.classpath=\
     ${file.reference.commons-collections4-4.4.jar}:\
     ${file.reference.commons-io-2.11.0.jar}:\
     ${file.reference.commons-math3-3.6.1.jar}:\
-    ${file.reference.log4j-api-2.18.0.jar}
+    ${file.reference.log4j-api-2.18.0.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
